Therion 5.5.2 (in progress):

therion:
 * bugs fixed
   - use proper ISO code for Czech language ('cs' instead of 'cz') [#251];
     'cz' is still allowed in the map layout for backwards compatibility
   - pdftex included in the windows installer failed to find images with
     '/./' or '/../' in the file path

--------------------------------------------------------------------------------

Therion 5.5.1 (2020-07-03):

therion:
 * duplicate shot length removed from expored individual team member statistics
 * improved Proj support in auto mode (automatic specification of the area of use;
   caching and logging of the used transformations)
 * added support for handling of missing coordinate transformation grids
   (see the proj-missing-grid init file option)
 * support for linking with multiple Proj versions to improve testing
   (see test_proj.sh)
 * improved mingw-w64 compatibility
 * bugs fixed
   - various memory-related fixes by Matěj Plch [#242,243,244,248]
   - broken debug build [#246]
   - workaround for Proj 7.1.0 axes swap in Krovak's projection
   - various items missing from the clean targets [#252]

windows installer:
 * updated InnoSetup
 * updated TeX and MetaPost distribution
 * installer now includes the right version of Proj support files automatically

--------------------------------------------------------------------------------

Therion 5.5.0 (2020-05-01):

therion:
 * maps-offset <on|off> feature in thconfig file to disable maps drawn
   in offset [#159]
 * maps <on|off> feature in thconfig file to produce map just from scraps,
   ignoring the maps definition
 * log extend feature in thconfig to log extended elevation construction
 * added point mudcrack (thanks to Rodrigo Severo)
 * added an extensive SBE symbol set (thanks to Rodrigo Severo)
 * geomag data updated up to 2025
 * added support for reproducible generation of PDF and SVG output
   (command-line option --reproducible-output)